[package]
name = "concourse-github-issue"
version = "1.2.0"
edition = "2021"

[dependencies]
octocrab  = "0.43"
concourse-resource = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 's'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
