[package]
name = "concourse-github-issue"
version = "1.2.2"
edition = "2024"
authors = ["Matthew Schuchard"]
description = "A Concourse resource for Github Issues"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/mschuchard/concourse-github-issue-resource"
keywords = ["concourse", "concourseresource", "githubissues"]
categories = ["api-bindings"]
exclude = [".circleci", ".github", ".gitignore", "Dockerfile"]

[dependencies]
octocrab  = "0.49"
concourse-resource = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
serde = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 's'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*